fix: api client url overflow issue

--- a/app/src/features/apiClient/screens/apiClient/components/clientView/apiClientView.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/clientView/apiClientView.scss
@@ -37,7 +37,7 @@
       display: flex;
       flex: auto;
       height: 32px;
-      width: 100%;
+      width: calc(100% - 205px);
 
       .api-request-method-selector {
         width: 120px;
